sound and images up and running
Co-Authored-By: mirandalyng <97983299+mirandalyng@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -11,8 +11,77 @@
 
 <body>
 
-    <div id="wrapper"></div>
+    <button>Click me!</button>
 
+    <div id="wrapper">
+        <div id="hover0">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/mona_lisa_cafe.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover1">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/birth_of_venus_waves.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover2">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/girl_with_pearl_earring_popcorn.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover3">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/nefertiti_gum.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover4">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/son-of_man_gas.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover5">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/arnolfini_portrait_video_game.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover6" <audio class="tunes" style="display:none">
+            <source src='sounds/desperate_man_robot.mp3' type="audio/mp3">
+            </source>
+            </audio>
+        </div>
+        <div id="hover7">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/the_kiss_cat.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover8">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/the_scream_siren.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+        <div id="hover9">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/whistlers_mother_keyboard.mp3' type="audio/mp3">
+                </source>
+            </audio>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
+        integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/106/three.min.js"
+        integrity="sha512-aqhdrigR8ePLi7IhiGrZz4APv1VktO5eCavRmavrNSk1Ut/s/WVlDwH94SeCqAiM0lm/s8mjtjaDhfevv2Zauw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="hover.js"></script>
     <script src="index.js"></script>
 </body>
 
