--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@
 
 <body>
 
-    <button>Click me!</button>
+    <div id="interaction">
+        <button class="button-82-pushable" role="button">
+            <span class="button-82-shadow"></span>
+            <span class="button-82-edge"></span>
+            <span class="button-82-front text">
+                Click me!
+            </span>
+        </button>
+    </div>
 
-    <div id="wrapper">
+    <div class="wrapper" id="hidden">
         <div id="hover0">
             <audio class="tunes" style="display:none">
                 <source src='sounds/mona_lisa_cafe.mp3' type="audio/mp3">
                 </source>
             </audio>
         </div>
-        <div id="hover1">
+        <div id="hover1" class="landscape">
             <audio class="tunes" style="display:none">
                 <source src='sounds/birth_of_venus_waves.mp3' type="audio/mp3">
                 </source>
@@ -50,9 +58,10 @@
                 </source>
             </audio>
         </div>
-        <div id="hover6" <audio class="tunes" style="display:none">
-            <source src='sounds/desperate_man_robot.mp3' type="audio/mp3">
-            </source>
+        <div id="hover6" class="landscape">
+            <audio class="tunes" style="display:none">
+                <source src='sounds/desperate_man_robot.mp3' type="audio/mp3">
+                </source>
             </audio>
         </div>
         <div id="hover7">
@@ -61,13 +70,13 @@
                 </source>
             </audio>
         </div>
-        <div id="hover8">
+        <div id="hover8" class="landscape">
             <audio class="tunes" style="display:none">
                 <source src='sounds/the_scream_siren.mp3' type="audio/mp3">
                 </source>
             </audio>
         </div>
-        <div id="hover9">
+        <div id="hover9" class="landscape">
             <audio class="tunes" style="display:none">
                 <source src='sounds/whistlers_mother_keyboard.mp3' type="audio/mp3">
                 </source>
