--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
+    
     <title>Document</title>
 </head>
 
@@ -22,6 +26,7 @@
     </div>
 
     <div class="wrapper" id="hidden">
+        <h1 class = "animate-charcter">ALTERED ART</h1>
         <div id="hover0">
             <audio class="tunes" style="display:none">
                 <source src='sounds/mona_lisa_cafe.mp3' type="audio/mp3">
