--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Space+Grotesk:wght@600&display=swap"
+        rel="stylesheet">
+
     <title>Document</title>
 </head>
 
 <body>
+
+    <div class="cursor"></div>
 
     <div id="interaction">
         <button class="button-82-pushable" role="button">
             <span class="button-82-shadow"></span>
             <span class="button-82-edge"></span>
             <span class="button-82-front text">
-                Click me!
+                Enter?
             </span>
         </button>
     </div>
 
     <div class="wrapper" id="hidden">
-        <h1 class = "animate-charcter">ALTERED ART</h1>
+        <h1 class="animate-charcter">ALTERED ART</h1>
+        <!-- <p>a visual audio project by A Jonsson & M Lyng</p> -->
         <div id="hover0">
             <audio class="tunes" style="display:none">
                 <source src='sounds/mona_lisa_cafe.mp3' type="audio/mp3">
